--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@ ul,li
     background-color: #000;
 }
 
-.bg-white{
-    background-color: white;
+.bg-#ffff{
+    background-color: #ffff;
 }
 .border-right{
     border: 1px solid rgba(255, 255, 255, 0.45);
@@ -62,7 +62,7 @@ ul,li
 }
 .navigation a{
     padding-right: 25px;
-    color: white;
+    color: #ffff;
     transition: all 0.5s;
 }
 .navigation a:hover {
@@ -110,7 +110,7 @@ ul,li
     margin: auto;
 }
 .first-p{
-    color: white;
+    color: #ffff;
     font-size: 25px;
     text-transform: capitalize;
     text-align: left;
@@ -121,12 +121,12 @@ ul,li
     transition: all 0.5s;
 }
 .second-p{
-    color: white;
+    color: #ffff;
     letter-spacing: 1px;
     font-size: 25px;
     padding: 20px 0;
     text-transform: capitalize;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid #ffff;
     transition: all 0.5s;
     padding-left: 50px;
 }
@@ -137,7 +137,7 @@ ul,li
     padding-left: 20px;
 }
 .hone{
-    color: white;
+    color: #ffff;
     font-size: 80px;
     /* padding-left: 23%; */
     padding-top: 50px;
@@ -146,7 +146,7 @@ ul,li
     color: #c9f31d;
 }
 .process{
-    color: white;
+    color: #ffff;
     font-size: 50px;
     padding-left: 20px;
 }
@@ -157,8 +157,8 @@ ul,li
 .triangle-btn button{
     padding: 15px;
     border-radius: 100%;
-    border: 1px solid white;
-    color: white;
+    border: 1px solid #ffff;
+    color: #ffff;
     background-color: #000;
 }
 .triangle-btn button svg{
@@ -193,7 +193,7 @@ marquee{
     padding-top: 100px;
 }
 .residing{
-    color: white;
+    color: #ffff;
     font-size: 22px;
     font-weight: 900;
     padding-top: 50px;
@@ -217,7 +217,7 @@ marquee{
 }
 .multiple-btns button:nth-child(2) , .multiple-btns button:nth-child(3) , .multiple-btns button:nth-child(4){
     background-color: #1d1d1d;
-    color: white;
+    color: #ffff;
     border: none;
     border-radius: 10px;
 }
@@ -236,7 +236,7 @@ marquee{
     padding-left: 50px;
 }
 .info{
-    color: white;
+    color: #ffff;
     padding-left: 78px;
     text-align: start;
 }
@@ -272,13 +272,13 @@ marquee{
 .id{
     padding: 10px 20px;
     text-transform: capitalize;
-    color: white;
+    color: #ffff;
     font-size: 20px;
     padding-top: 20px;
     font-weight: 500;
 }
 .id a{
-    color: white;
+    color: #ffff;
 }
 .app{
     margin-right: 80px;
@@ -312,7 +312,7 @@ marquee{
 
 .award-box{
     border-bottom: 1px solid rgba(255, 255, 255, 0.23);
-    color: white;
+    color: #ffff;
 }
 .our{
     font-size: 25px;
@@ -359,7 +359,7 @@ marquee{
 
 
 .complete{
-    color: white;
+    color: #ffff;
     font-size: 25px;
     padding:20px 10px;
 }
@@ -399,7 +399,7 @@ marquee{
 }
 .project-head{
     text-align: center;
-    color: white;
+    color: #ffff;
     line-height: 60px;
     font-size: 30px;
     padding:0px 614px ;
@@ -419,11 +419,11 @@ marquee{
     font-size: 25px;
     font-weight: 500;
     margin-top: 5px;
-    color: white;
+    color: #ffff;
     text-transform: uppercase;
 }
 .up-svg{
-    color: white;
+    color: #ffff;
     border-radius: 6px;
     padding: 15px;
     background-color: #1D1D1D;
@@ -496,10 +496,6 @@ marquee{
 
 /* <!-- need a project --> */
 
-.desktop
-{
-    /* margin-top: 80px; */
-}
 .right-img img{
     padding-left: 50px;
     padding-top: 30px;
@@ -535,7 +531,7 @@ marquee{
 }
 .meeting
 {
-    color: white;
+    color: #ffff;
     padding-top: 20px ;
    
 }
@@ -562,7 +558,7 @@ marquee{
 }
 .matias a
 {
-    color: white;
+    color: #ffff;
 }
 .fixed
 {
@@ -576,7 +572,7 @@ marquee{
 }
 .matias p
 {
-    color: white;
+    color: #ffff;
 }
 
 /* <!-- provided services --> */
@@ -622,7 +618,7 @@ marquee{
 
 .business h1
 {
-    color: white;
+    color: #ffff;
     text-align: center;
     padding-top: 42px ;
     font-size: 60px;
@@ -631,12 +627,12 @@ marquee{
 
 .serial-adjust
 {
-    color: white;
+    color: #ffff;
     font-size: 20px;
 }
 .cont
 {
-    color: white;
+    color: #ffff;
     line-height:40px;
     padding-left: 50px;
 
@@ -663,7 +659,7 @@ marquee{
 {
     width: 50px ;
     height: 50px;
-    color: white;
+    color: #ffff;
     border-radius: 6px;
     text-align: center;
     background-color: #1D1D1D;
@@ -723,6 +719,192 @@ marquee{
     color: black;
 }
 
+
+/* <!-- Happy Words  --> */
+
+.testimo
+{
+    padding-top: 120px;
+    
+}
+.testimonial
+{
+    color: #ffff;
+    text-transform: capitalize;
+    color: #c9f31d;
+}
+
+.customer
+{
+    color: #ffff;
+    text-align: center;
+    padding-top: 20px;
+    font-size: 25px;
+    letter-spacing: 2px;
+    font-weight: 500;
+    line-height: 54px;
+}
+/*  <!-- my blogs --> */
+
+
+.recent
+{
+    margin-top: 74px;
+    padding: 30px;
+    /* padding-left: 0;  */
+}
+.dummy
+{
+    /* border: 2px solid red; */
+    width: 100%;
+    padding: 10px 0px;
+}
+/* .blog-dash
+{
+    position: relative;
+} */
+.blog-dash::after{
+    /* position: absolute; */
+    content: "";
+    width: 70px;
+    background-color: #c9f31d;
+    /* top: 13px; */
+    /* left: 150px; */
+    /* left: 0; */
+    display: block;
+    height: 1px;
+}
+.my-blog
+{
+    color: #c9f31d;
+    font-size: 24px;
+    text-transform: capitalize;
+    display: block;
+    /* position: absolute;
+    left: 270px; */
+    padding-left:50px;
+}
+.post
+{
+    color: #ffff;
+    font-size: 50px;
+    display: block;
+    padding: 10px 0px;
+}
+.recent-post
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+}
+
+.eyes
+{
+    padding: 20px 0;
+}
+.dates
+{
+    color: #999999;
+    border: 1px solid rgb(38, 37, 37);
+    padding:7px 15px;
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 50px;
+    /* display: block; */
+    width: fit-content;
+}
+.helps
+{
+    padding-top: 20px;
+    color: #ffff;
+    font-size: 24px;
+}
+.spectacular img
+{
+    /* width: 100%; */
+    max-width: 290px;
+    height: 157px;
+    cursor: pointer;
+}
+.common-icon
+{
+    color: #ffff;
+    border: 1px solid rgb(38, 37, 37);
+    border-radius: 50px;
+    padding: 20px ;
+}
+/* <!-- footor-top --> */
+
+.touch
+{
+    text-transform: uppercase;
+    color: #ffff;
+    font-size: 100px;
+    border: 1px solid rgb(38, 37, 37);
+    border-radius: 10px;
+    text-align: center;
+    padding:20px 200px;
+    font-weight: 500;
+    margin-top: 120px;
+    margin-bottom: 50px;
+}
+.get-content
+{
+    color: #ffff;
+    font-size: 25px;
+    padding: 20px;
+    padding-bottom: 90px;
+    padding-left: 0;
+}
+.get-content p
+{
+    color: #ffff;
+    font-size: 22px;
+    padding-bottom: 55px;
+    font-weight: 500;
+}
+
+.get-content a
+{
+    color: #ffff;
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.get{
+    padding: 25px;
+    border: 1px solid rgb(38, 37, 37);
+    border-radius: 10px;
+    margin: 8px;
+    transition: all 0.5s;
+    
+}
+.get:hover
+{
+    background-color: #c9f31d;
+}
+.get:hover .arrow-right-1
+{
+    color: #000;
+}
+.get:hover .fb a
+{
+    color: #000;
+}
+
+
+.fb a
+{
+    color: #ffff;
+    text-transform: capitalize;
+    font-size: 24px;
+    transition: all 0.5s;
+
+}
+.arrow-right-1
+{
+    color: #ffff;
+}
 /* <!-- footor-bottom --> */
 
 
@@ -732,7 +914,7 @@ marquee{
 }
 .copy-right
 {
-    color: white;
+    color: #ffff;
     padding: 20px 0;
     font-size: 20px;
     padding-right: 50px;
@@ -745,7 +927,7 @@ marquee{
 {
     gap: 38px;
     padding: 20px 0;
-    color: white;
+    color: #ffff;
     font-size: 20px;
 }
 
@@ -771,4 +953,32 @@ marquee{
     padding: 10px;
     background-color: #c9f31d;
     border-radius: 5px;
+}
+.btn-3
+{
+    /* border: 2px solid green; */
+    padding: 80px 0px ;
+}
+.more-work-left
+{
+    border: none;
+    width: 210px;
+    height: 210px;
+    border-radius: 300px;
+    background-color: #c9f31d;
+    font-size: 18px;
+    align-content: center;
+    text-align: center;
+}
+.more-work-left:hover{
+    cursor: pointer;
+}
+.company-grow
+{
+    border-top: 1px solid #999999;
+    border-bottom: 1px solid #999999;
+}
+.space-around
+{
+    justify-content: space-around;
 }
