--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ body{
 {
     font-family: var(--caveat);
 }
+.ff-kanit
+{
+    font-family: var(--kanit);
+}
 a{
     text-decoration: none;
     
@@ -43,6 +47,9 @@ ul,li
 .justify-between{
     justify-content: space-between;
 }
+.justify-evenly{
+    justify-content: space-evenly;
+}
 .justify-around
 {
     justify-content: space-around;
@@ -52,10 +59,20 @@ ul,li
 }
 .head-bg{
     background-color: #000;
+    width: 100%;
 }
-
+.flex
+{
+    display: flex;
+    flex: 2;
+}
 .bg-#ffff{
     background-color: #ffff;
+}
+/* padding */
+.pr-10
+{
+    padding-right: 10pt;
 }
 .border-right{
     border: 1px solid rgba(255, 255, 255, 0.45);
@@ -660,15 +677,15 @@ marquee{
     content: "";
     width: 70px;
     height: 1px;
-    top: 12px;
-    left: 37%;
+    top: 16px;
+    left: 36.8%;
     background-color: #c9f31d;
 }
 .special
 {
     color: #c9f31d;
     padding-right: 14px;
-    font-size: 20px;
+    font-size: 24px;
 }
 .provide-right
 {
@@ -680,8 +697,8 @@ marquee{
     content: "";
     width: 70px;
     height: 1px;
-    top: -10px;
-    right: 38%;
+    top: -12px;
+    right: 37.5%;
     background-color: #c9f31d;
 }
 .lets{
@@ -695,7 +712,7 @@ marquee{
     text-align: center;
     padding-top: 42px ;
     font-size: 60px;
-    font-weight: 600;
+    font-weight: 400;
 }
 
 .serial-adjust
@@ -714,18 +731,20 @@ marquee{
 .cont h5
 {
     font-size: 20px;
+    font-weight: 500;
 }
 .cont h2
 {
     font-size: 30px;
     transition: all 0.5s;
+    font-weight: 400;
 }
 .pra
 {
     color: #999999;
     padding-top: 10px;
     text-transform: capitalize;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
 }
 .down
@@ -797,10 +816,15 @@ marquee{
 
 
 
+.gap-10
+{
+    gap: 10px;
+}
 .few h1
 {
-    font-size: 45px;
+    font-size: 43px;
     margin-top: 40px;
+    font-weight: 500;
 }
 .steps
 {
@@ -812,7 +836,7 @@ marquee{
 .Concept-cart
 {
     border: 1px solid rgb(38, 37, 37);
-    padding:30px;
+    padding:25px 30px;
     transition: all 0.5s;
     border-radius: 10px;
 }
@@ -854,16 +878,17 @@ marquee{
 {
     background-color: #c9f31d;
 }
-.Concept-h1
+.Concept-h1 h1
 {
-    font-size: 32px;
+    font-size: 45px;
+    font-weight: 500;
 }
-.little
+.little p
 {
-    font-size: 20px;
+    font-size: 18px;
     color: #999999;
     padding-top: 30px;
-    font-weight: 500;
+    font-weight: 400;
 }
 .yellow-dot-top
 {
@@ -884,12 +909,12 @@ marquee{
     background-color: #c9f31d;
     border-radius: 100px;
 }
-.reviewing
+.reviewing p
 {
-   padding-left: 20px;
+   padding-left: 18px;
    color: #999999;
    font-size: 20px;
-   font-weight: 500;
+   font-weight: 400;
    padding-bottom: 20px;
 }
 .process-item
@@ -903,11 +928,44 @@ marquee{
     width: 50px;
     height: 50px;
     right: -30px;
+    bottom: -34px;
+    background-color: #121212;
+    border-radius: 100px 20px 20px 0;
+    transition: all .4s;
+}
+.design-item
+{
+    position: relative;
+}
+.design-item::before
+{
+    position: absolute;
+    content: "";
+    width: 50px;
+    height: 50px;
+    right: -30px;
     bottom: -30px;
     background-color: #121212;
     border-radius: 100px 20px 20px 0;
     transition: all .4s;
 }
+.Webflow-item
+{
+    position: relative;
+}
+.Webflow-item::before
+{
+    position: absolute;
+    content: "";
+    width: 50px;
+    height: 50px;
+    right: -30px;
+    bottom: -30px;
+    background-color: #121212;
+    border-radius: 100px 20px 20px 0;
+    transition: all .4s;
+}
+
 /* <!-- Happy Words  --> */
 
 
@@ -923,7 +981,7 @@ marquee{
 .believable
 {
     position: relative;
-    padding:150px 100px;
+    padding:150px 50px;
     z-index: 1;
 }
 .testimo
@@ -948,11 +1006,14 @@ marquee{
 {
     color: #ffff;
     text-align: center;
-    padding-top: 20px;
-    font-size: 25px;
+    padding: 25px 0;
     letter-spacing: 2px;
-    font-weight: 500;
-    line-height: 54px;
+}
+.customer h1
+{
+    font-size: 60px;
+    font-weight: 400;
+    line-height: 80px;
 }
 .side-swiper p
 {
@@ -1119,7 +1180,7 @@ marquee{
 .my-blog
 {
     color: #c9f31d;
-    font-size: 24px;
+    font-size: 30px;
     text-transform: capitalize;
     display: block;
     /* position: absolute;
@@ -1129,16 +1190,21 @@ marquee{
 .post
 {
     color: #ffff;
-    font-size: 50px;
+    
     display: block;
     padding: 10px 0px;
 }
-         
+
+.post h3
+{
+    font-size: 40px;
+    font-weight: 400;
+}
 
 .eyes
 {
-    padding: 20px 0;
-    padding-right: 50px;
+    padding: 12px 0;
+    /* padding-right: 50px; */
 }
 .dates
 {
@@ -1146,7 +1212,7 @@ marquee{
     border: 1px solid rgb(38, 37, 37);
     padding:7px 15px;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 400;
     border-radius: 50px;
     padding-right: 27px;
     /* display: block; */
@@ -1156,8 +1222,12 @@ marquee{
 {
     padding-top: 20px;
     color: #ffff;
-    font-size: 22px;
     transition: all 0.5s;
+}
+.helps h1
+{
+    font-size: 25px;
+    font-weight: 400;
 }
 .spectacular img
 {
@@ -1263,14 +1333,19 @@ marquee{
 {
     text-transform: uppercase;
     color: #ffff;
-    font-size: 100px;
     border: 1px solid rgb(38, 37, 37);
     border-radius: 10px;
     text-align: center;
     padding:20px 200px;
-    font-weight: 500;
+    
     margin-top: 120px;
     margin-bottom: 50px;
+}
+.touch h1 
+{
+    letter-spacing: 5px;
+    font-size: 100px;
+    font-weight: 500;
 }
 .get-content
 {
@@ -1285,14 +1360,15 @@ marquee{
     color: #ffff;
     font-size: 22px;
     padding-bottom: 55px;
-    font-weight: 500;
+    /* font-weight: 500; */
 }
 
 .get-content a
 {
     color: #ffff;
-    font-size: 30px;
-    font-weight: 500;
+    font-size: 35px;
+    text-transform: capitalize;
+    /* font-weight: 500; */
 }
 
 .get{
@@ -1378,4 +1454,3 @@ marquee{
     background-color: #c9f31d;
     border-radius: 5px;
 }
-
